# roman_numerals

./: CMakeLists.txt  README.md
apps/: roman_main
include/: roman.h
src/: main.c  roman.c
tests/: roman.tests.cpp
